--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Riya's personal Site</title>
+    <title>**'s personal Site</title>
   </head>
   <body>
     <table cellspacing="20">
       <tr>
         <td><img src="pics.jpg" alt="Profile picture" width="170" height="170"></td>
-        <td>  <h1>Riya</h1>
-          <p><em>I am Student. Studying in <strong><a href="https://en.wikipedia.org/wiki/Sophia_College_for_Women">Sophia College</a> </strong>.</em></p>
+        <td>  <h1>..</h1>
+          <p><em>I am Student. Studying in <strong><a href="https://en.wikipedia.org/wiki/Sophia_College_for_Women">College</a> </strong>.</em></p>
           <p>I am learning web development. I love coffee.</p></td>
       </tr>
     </table>
@@ -18,7 +18,7 @@
       <ul>
         <li> high school</li>
         <li> college</li>
-        <liSophia College</li>
+        <li> College</li>
       </ul>
       <hr>
       <h3>Studying Course</h3>
