--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <tr>
         <td><img src="pics.jpg" alt="Profile picture" width="170" height="170"></td>
         <td>  <h1>..</h1>
-          <p><em>I am Student. Studying in <strong><a href="https://en.wikipedia.org/wiki/Sophia_College_for_Women">College</a> </strong>.</em></p>
+          <p><em>I am Student. Studying in <strong>College</strong>.</em></p>
           <p>I am learning web development. I love coffee.</p></td>
       </tr>
     </table>
